# cp

./: .gitignore  Cargo.toml  README.md  build.rs  deny.toml
.github/workflows/: bench.yml  ci.yml  pages.yml  release.yml
benches/: copy_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
html/: index.html
scripts/: update-benchmarks.py
src/: backup.rs  cli.rs  copy.rs  dir.rs  engine.rs  error.rs  lib.rs  main.rs  metadata.rs  options.rs  progress.rs  sparse.rs  util.rs
tests/: integration.rs  security.rs  unit_backup.rs  unit_copy.rs  unit_dir.rs  unit_engine.rs  unit_metadata.rs  unit_options.rs  unit_parallel.rs  unit_sparse.rs  unit_util.rs
tests/common/: mod.rs
