[package]
name = "cp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"
walkdir = "2"
xattr = "1.6"
posix-acl = "1.2"
filetime = "0.2"
same-file = "1.0"
thiserror = "2"
nix = { version = "0.30", features = ["fs", "user"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
rand = "0.9"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"

[[test]]
name = "copy_bench"
path = "benches/copy_bench.rs"

[profile.release]
opt-level = 3
lto = true
strip = true
